# file-watcher

./: .clangd  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/sanity/: main.cpp
src/: filewatcher.cpp  filewatcher.h  result.cpp  result.h
tests/: CMakeLists.txt  result_test.cpp
